[INJIMOB-2337] add dynamic intro-sliders with localization support
Signed-off-by: Abhishek Paul <paul.apaul.abhishek.ap@gmail.com>

--- a/locales/ara.json
+++ b/locales/ara.json
@@ -836,6 +836,8 @@
   },
   "SendVPScreen": {
     "requester": "جهة التحقق",
+    "introTitle": "المحقق",
+    "requestMessage": "يطلب هويتك الرقمية لغرض",
     "cardsSelected": "البطاقات المختارة",
     "cardSelected": "card selected",
     "unCheck": "البطاقة مختارة",
